--- a/plugin.xml
+++ b/plugin.xml
@@ -6,5 +6,6 @@
     <name>phonegap-plugin-pwa</name>
 
     <dependency id="phonegap-plugin-service-worker" url="https://github.com/phonegap/phonegap-plugin-service-worker" version="^1.0.0" />
+    <dependency id="cordova-plugin-network-information" version="^1.3.0" />
 
 </plugin>
