--- a/plugin.xml
+++ b/plugin.xml
@@ -7,5 +7,6 @@
 
     <dependency id="phonegap-plugin-service-worker" url="https://github.com/phonegap/phonegap-plugin-service-worker" version="^1.0.0" />
     <dependency id="cordova-plugin-network-information" version="^1.3.0" />
+    <dependency id="cordova-plugin-vibration" version="^2.1.4" />
 
 </plugin>
