--- a/plugin.xml
+++ b/plugin.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-           id="phonegap-plugin-pwa"
-      version="0.0.1">
+<plugin
+    xmlns="http://cordova.apache.org/ns/plugins/1.0" id="phonegap-plugin-pwa" version="0.0.1">
     <name>phonegap-plugin-pwa</name>
-
     <dependency id="phonegap-plugin-service-worker" url="https://github.com/phonegap/phonegap-plugin-service-worker" version="^1.0.0" />
     <dependency id="phonegap-plugin-battery-status" version="^1.0.0" />
-    <dependency id="phonegap-plugin-local-notification" version="^1.0.0" />
-    <dependency id="phonegap-plugin-media-stream" version="^1.0.0" />
-    <dependency id="phonegap-plugin-image-capture" version="^1.0.0" />
-
+    <dependency id="phonegap-plugin-local-notification" version="^1.0.1" />
+    <dependency id="phonegap-plugin-media-stream" version="^1.2.1" />
+    <dependency id="phonegap-plugin-image-capture" version="^1.1.2" />
     <!-- core plugins -->
     <dependency id="cordova-plugin-network-information" version="^1.3.0" />
     <dependency id="cordova-plugin-geolocation" version="^2.4.2" />
     <dependency id="cordova-plugin-vibration" version="^2.1.4" />
-
 </plugin>
