--- a/plugin.xml
+++ b/plugin.xml
@@ -7,6 +7,7 @@
     <dependency id="phonegap-plugin-local-notification" version="^1.0.1" />
     <dependency id="phonegap-plugin-media-stream" version="^1.2.1" />
     <dependency id="phonegap-plugin-image-capture" version="^1.1.2" />
+    <dependency id="phonegap-plugin-media-recorder" version="^1.1.0" />
     <!-- core plugins -->
     <dependency id="cordova-plugin-network-information" version="^1.3.0" />
     <dependency id="cordova-plugin-geolocation" version="^2.4.2" />
