--- a/plugin.xml
+++ b/plugin.xml
@@ -8,6 +8,7 @@
     <dependency id="phonegap-plugin-media-stream" version="^1.2.1" />
     <dependency id="phonegap-plugin-image-capture" version="^1.1.2" />
     <dependency id="phonegap-plugin-media-recorder" version="^1.1.0" />
+    <dependency id="cordova-plugin-x-socialsharing" version="^5.2.1" />
     <!-- core plugins -->
     <dependency id="cordova-plugin-network-information" version="^1.3.0" />
     <dependency id="cordova-plugin-geolocation" version="^3.0.0" />
